--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  Overflow-x:scroll;
 }
 
 /* top header */
@@ -13,6 +15,7 @@
   border-bottom: 2px solid white;
   display: flex;
   align-items: center;
+  justify-content: center;
   /*padding:0 1rem;*/
   background: rgb(255,255,255,0.3);
 }
@@ -34,4 +37,96 @@
   font-size: 2.5rem;
   margin-left: 1rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.content-box {
+  width: 35rem;
+  height: 50rem;
+  background: rgb(255,255,255,0.3);
+  overflow-wrap: normal;
+  display: flex;
+  /*justify-content: center;*/
+  align-items: space-between;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  border-radius: 1rem;
+}
+
+.loc-img {
+  background: url('https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/granite-falls-washington-miles-bergsma.jpg') no-repeat;
+  background-size: contain;
+  width: 35rem;
+  height: 25rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin-left: 150px;
+}
+
+.loc-name {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  margin-left: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bolder;
+}
+
+.info {
+  width: 30rem;
+  height: 30rem;
+  background: rgba(0, 0, 0, 0.03);
+  margin-left: 45px;
+  margin-top: 1rem;
+  margin-bottom: .8rem;
+  border-radius: 1rem;
+}
+
+.loc-title{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(70, 42, 11);
+  margin-left: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bolder;
+  padding: none;
+}
+
+.dis{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(70, 42, 11);
+  margin-left: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bolder;
+  font-size: 30%;
+}
+
+.des{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(70, 42, 11);
+  margin-left: 1rem;
+  margin-right: .3rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: normal;
+  font-size: 80%;
+  font-style: italic;
+}
+
+.visit{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(70, 42, 11);
+  margin-left: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bolder;
+  font-size: 90%;
+}
+
+.ideas{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(70, 42, 11);
+  margin-left: 1rem;
+  margin-right: .3rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: normal;
+  font-size: 80%;
 }
