--- a/src/Explore.css
+++ b/src/Explore.css
@@ -47,9 +47,8 @@
 .dislike {
   background: transparent;
   border: transparent;
-  /* filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.2)); */
   filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.2));
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .like:hover {
@@ -60,7 +59,7 @@
   background: transparent;
   border: transparent;
   filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.2));
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .title {
